--- a/package.json
+++ b/package.json
@@ -26,26 +26,39 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^24.0.18",
+    "@types/react-test-renderer": "^16.9.0",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "4.6.0",
     "css-loader": "3.2.0",
     "dotenv": "^8.1.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
     "file-loader": "4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "imagemin-gifsicle": "6.0.1",
     "imagemin-mozjpeg": "8.0.0",
     "imagemin-optipng": "7.0.0",
     "imagemin-svgo": "7.0.0",
     "imagemin-webp-webpack-plugin": "3.2.1",
     "img-loader": "3.0.1",
+    "jest": "^24.9.0",
+    "jest-junit": "^8.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pwa-asset-generator": "^1.1.7",
+    "react-test-renderer": "^16.9.0",
     "resolve-url-loader": "3.1.0",
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
+    "ts-jest": "^24.0.2",
     "ts-loader": "5.3.2",
     "typescript": "3.2.2",
     "webpack": "4.28.2",
@@ -60,6 +73,7 @@
     "dev": "webpack-dev-server --open --mode development",
     "build": "npm run pwa && webpack --mode production",
     "pwa": "pwa-asset-generator ./src/img/touch/homescreen.png ./src/img/touch --icon-only --manifest=./src/manifest.json --index=./src/index.html",
-    "serve": "http-server docs -o"
+    "serve": "http-server docs -o",
+    "test": "jest"
   }
 }
