--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@types/react-dom": "16.9.0",
     "@types/react-redux": "7.1.2",
     "@types/webpack-env": "1.14.0",
+    "clsx": "1.0.4",
     "es6-promise": "4.2.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
+    "recharts": "1.7.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
