--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PUBLIC_PATH="/docs/"
+PUBLIC_PATH="/dist/"
 DEVSERVER_PUBLIC="http://192.168.10.10:8080"
 DEVSERVER_HOST="0.0.0.0"
 DEVSERVER_POLL=1
