--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "carplates",
   "version": "1.0.0",
   "description": "Car plates recognizer",
+  "main": "webpack.config.js",
   "keywords": [
     "car plate",
     "car plates",
@@ -43,6 +44,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.18",
     "@types/react-test-renderer": "^16.9.0",
+    "autoprefixer": "^9.6.1",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "4.6.0",
     "css-loader": "3.2.0",
@@ -50,6 +52,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
+    "extract-loader": "^3.1.0",
     "file-loader": "4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
@@ -62,9 +65,11 @@
     "jest": "^24.9.0",
     "jest-junit": "^8.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
+    "postcss-loader": "^3.0.0",
     "pwa-asset-generator": "^1.1.7",
     "react-test-renderer": "^16.9.0",
     "resolve-url-loader": "3.1.0",
+    "sass-loader": "^8.0.0",
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
     "ts-jest": "^24.0.2",
