--- a/package.json
+++ b/package.json
@@ -85,8 +85,8 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --open --mode development",
-    "build": "npm run pwa && webpack --mode production",
-    "pwa": "pwa-asset-generator ./src/img/touch/homescreen.png ./src/img/touch --icon-only --manifest=./src/manifest.json --index=./src/index.html",
+    "build": "webpack --mode production && npm run pwa",
+    "pwa": "pwa-asset-generator ./dist/img/touch/homescreen.png ./dist/img/touch --icon-only --manifest=./dist/manifest.json --index=./dist/index.html",
     "serve": "http-server dist -o",
     "test": "jest"
   }
