--- a/package.json
+++ b/package.json
@@ -26,10 +26,6 @@
   "dependencies": {
     "@material-ui/core": "4.4.0",
     "@material-ui/icons": "4.2.1",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
-    "@types/react-redux": "7.1.2",
-    "@types/webpack-env": "1.14.0",
     "clsx": "1.0.4",
     "es6-promise": "4.2.8",
     "react": "^16.9.0",
@@ -43,7 +39,11 @@
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.18",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.2",
     "@types/react-test-renderer": "^16.9.0",
+    "@types/webpack-env": "^1.14.0",
     "autoprefixer": "^9.6.1",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "4.6.0",
