--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^7.1.1",
     "recharts": "1.7.1",
     "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
