--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DEVSERVER_HOST="0.0.0.0"
 DEVSERVER_POLL=1
 DEVSERVER_PORT=8080
 DEVSERVER_HTTPS=0
+PUBLIC_SITE_URL="https://carplate.app"
+AZURE_TABLE_SERVICE_URL="https://krak86.table.core.windows.net/CarsPartitions?sv=2018-03-28&si=CarsPartitions-16C8C16AF0F&tn=carspartitions&sig=ungV9j%2Bdr25VsPqWPq3i1CsApjytU0zHldEFTQB2FiI%3D&$filter="
