--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@material-ui/core": "4.4.0",
     "@material-ui/icons": "4.2.1",
     "clsx": "1.0.4",
+    "dotenv-webpack": "^1.7.0",
     "es6-promise": "4.2.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -37,6 +38,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.18",
@@ -44,6 +46,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
     "@types/react-test-renderer": "^16.9.0",
+    "@types/webpack": "^4.39.1",
     "@types/webpack-env": "^1.14.0",
     "autoprefixer": "^9.6.1",
     "clean-webpack-plugin": "^1.0.0",
