--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
     "clsx": "1.0.4",
     "dotenv-webpack": "^1.7.0",
     "es6-promise": "4.2.8",
+    "promise-polyfill": "8.1.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "recharts": "1.7.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
