--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ DEVSERVER_PORT=8080
 DEVSERVER_HTTPS=0
 PUBLIC_SITE_URL="https://carplate.app"
 AZURE_TABLE_SERVICE_URL="https://krak86.table.core.windows.net/CarsPartitions?sv=2018-03-28&si=CarsPartitions-16C8C16AF0F&tn=carspartitions&sig=ungV9j%2Bdr25VsPqWPq3i1CsApjytU0zHldEFTQB2FiI%3D&$filter="
+AZURE_FUNC_PLATE_RECOGNIZER_URL="https://carsdatabase.azurewebsites.net/api/platerecognizerservice?code=Xfu8uAxj7dUwB257kapxxixsBGtjekIfw/AkA8pQdwxzOUlCFr3EQA=="
+GET_IMAGE_BY_NAME_KEY="13241537-06d8871706b8937518ecf25ca"
+RIA_KEY="UswqYgYawCC7WNAy17KhuVeGtpu85mJ1IVn2Dknj"
