--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "promise-polyfill": "8.1.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.0.5",
     "react-redux": "^7.1.1",
     "recharts": "1.7.1",
     "redux": "^4.0.4",
