--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.5",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.0",
     "react-share": "^3.0.1",
     "recharts": "1.7.1",
     "redux": "^4.0.4",
