--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
+    "@types/react-router-dom": "^5.1.0",
     "@types/react-test-renderer": "^16.9.0",
     "@types/webpack": "^4.39.1",
     "@types/webpack-env": "^1.14.0",
