--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "dev": "webpack-dev-server --open --mode development",
     "build": "webpack --mode production && npm run pwa",
     "pwa": "pwa-asset-generator ./docs/img/touch/homescreen.png ./docs/img/touch --icon-only --manifest=./docs/manifest.json --index=./docs/index.html",
-    "serve": "http-server dist -o",
+    "serve": "http-server docs -o",
     "test": "jest"
   }
 }
