--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.0",
     "react-share": "^3.0.1",
+    "react-webcam": "3.1.1",
     "recharts": "1.7.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
