--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "1.0.4",
     "dotenv-webpack": "^1.7.0",
     "es6-promise": "4.2.8",
+    "lodash.throttle": "^4.1.1",
     "promise-polyfill": "8.1.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
