--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,12 +1,22 @@
 {
   "name": "carplates",
   "short_name": "carplates",
-  "start_url": "http://localhost:8080/index.html",
-  "display": "fullscreen",
+  "start_url": "https://7b01ae6b.ngrok.io/index.html",
+  "display": "standalone",
   "background_color": "#3f51b5",
   "theme_color": "#3f51b5",
   "description": "Car plates recognizer",
   "prefer_related_applications": false,
   "icons": [
+    {
+      "src": "img/touch/manifest-icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "img/touch/manifest-icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
 }
