add azure function code for image code recognizer;

--- a/.env_example
+++ b/.env_example
@@ -7,6 +7,8 @@ DEVSERVER_HTTPS=
 PUBLIC_SITE_URL=
 AZURE_TABLE_SERVICE_URL=
 AZURE_FUNC_PLATE_RECOGNIZER_URL=
+AZURE_FUNC_PLATE_RECOGNIZER_TOKEN=
+AZURE_FUNC_PLATE_RECOGNIZER_EXTERNAL_SERVICE_URL=
 GET_IMAGE_BY_NAME_KEY=
 RIA_KEY=
 FACEBOOK_CLIENT_ID=
