--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Cars UA",
   "short_name": "Cars UA",
-  "start_url": "https://7b01ae6b.ngrok.io/index.html",
+  "start_url": "https://krak86.github.io/carplates",
   "display": "standalone",
   "background_color": "#3f51b5",
   "theme_color": "#3f51b5",
