update  "start_url": "https://www.carsua.app"

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Cars UA",
   "short_name": "Cars UA",
-  "start_url": "https://krak86.github.io/carplates",
+  "start_url": "https://www.carsua.app",
   "display": "standalone",
   "background_color": "#3f51b5",
   "theme_color": "#3f51b5",
