--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Cars UA",
   "short_name": "Cars UA",
-  "start_url": "https://www.carsua.app",
+  "start_url": "https://carsua.app",
   "display": "standalone",
   "background_color": "#3f51b5",
   "theme_color": "#3f51b5",
