--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@material-ui/core": "4.4.0",
     "@material-ui/icons": "4.2.1",
     "clsx": "1.0.4",
+    "disqus-react": "^1.0.7",
     "dotenv-webpack": "^1.7.0",
     "es6-promise": "4.2.8",
     "promise-polyfill": "8.1.3",
