--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "type": "git",
     "url": "git+https://github.com/Krak86/carplates.git"
   },
+  "engines": {
+    "node": ">=12.1.0"
+  },
   "dependencies": {
     "@material-ui/core": "4.4.0",
     "@material-ui/icons": "4.2.1",
