--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -8,7 +8,7 @@ on:
     - master
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-2019
     strategy:
       matrix:
         node-version: [12.1.0]
@@ -21,7 +21,5 @@ jobs:
     - name: npm install, test, and build
       run: |
         npm install
-        npm run test
+        npm test
         npm run build
-      env:
-        CI: true
