Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,11 +10,24 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
+
 - task: NodeTool@0
   inputs:
     versionSpec: '12.x'
   displayName: 'Install Node.js'
-
+  env:
+    PUBLIC_SITE_URL: $(PUBLIC_SITE_URL)
+    DISQUS_SHORT_NAME: $(DISQUS_SHORT_NAME)
+    AZURE_TABLE_SERVICE_URL: $(AZURE_TABLE_SERVICE_URL)
+    AZURE_FUNC_PLATE_RECOGNIZER_URL: $(AZURE_FUNC_PLATE_RECOGNIZER_URL)
+    AZURE_FUNC_PLATE_RECOGNIZER_TOKEN: $(AZURE_FUNC_PLATE_RECOGNIZER_TOKEN)
+    AZURE_FUNC_PLATE_RECOGNIZER_EXTERNAL_SERVICE_URL: $(AZURE_FUNC_PLATE_RECOGNIZER_EXTERNAL_SERVICE_URL)
+    GET_IMAGE_BY_NAME_KEY: $(GET_IMAGE_BY_NAME_KEY)
+    RIA_KEY: $(RIA_KEY)
+    FACEBOOK_CLIENT_ID: $(FACEBOOK_CLIENT_ID)
+    FACEBOOK_APP_SECRET: $(FACEBOOK_APP_SECRET)
+    GOOGLE_CLIENT_ID: $(GOOGLE_CLIENT_ID)
+    GOOGLE_APP_SECRET: $(GOOGLE_APP_SECRET)
 - script: |
     npm install
     npm test
