--- a/.env_example
+++ b/.env_example
@@ -9,6 +9,8 @@ AZURE_TABLE_SERVICE_URL=
 AZURE_FUNC_PLATE_RECOGNIZER_URL=
 AZURE_FUNC_PLATE_RECOGNIZER_TOKEN=
 AZURE_FUNC_PLATE_RECOGNIZER_EXTERNAL_SERVICE_URL=
+AZURE_TABLE_FAVORITES_SERVICE_URL=
+AZURE_TABLE_FAVORITES_SERVICE_URL_QUERY=
 GET_IMAGE_BY_NAME_KEY=
 RIA_KEY=
 FACEBOOK_CLIENT_ID=
