--- a/.env_example
+++ b/.env_example
@@ -5,15 +5,17 @@ DEVSERVER_POLL=
 DEVSERVER_PORT=
 DEVSERVER_HTTPS=
 PUBLIC_SITE_URL=
+DISQUS_SHORT_NAME=
 AZURE_TABLE_SERVICE_URL=
 AZURE_FUNC_PLATE_RECOGNIZER_URL=
 AZURE_FUNC_PLATE_RECOGNIZER_TOKEN=
 AZURE_FUNC_PLATE_RECOGNIZER_EXTERNAL_SERVICE_URL=
 AZURE_TABLE_FAVORITES_SERVICE_URL=
 AZURE_TABLE_FAVORITES_SERVICE_URL_QUERY=
+PLATES_MANIA_KEY=
 GET_IMAGE_BY_NAME_KEY=
 RIA_KEY=
 FACEBOOK_CLIENT_ID=
 FACEBOOK_APP_SECRET=
 GOOGLE_CLIENT_ID=
-GOOGLE_APP_SECRET=""
+GOOGLE_APP_SECRET=
