--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "es6-promise": "4.2.8",
     "promise-polyfill": "8.1.3",
     "react": "^16.9.0",
+    "react-cam": "^1.0.2",
     "react-dom": "^16.9.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.5",
