--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^16.9.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.5",
+    "react-html5-camera-photo": "^1.5.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.0",
     "react-share": "^3.0.1",
