--- a/package.json
+++ b/package.json
@@ -32,18 +32,17 @@
     "clsx": "1.0.4",
     "disqus-react": "^1.0.7",
     "dotenv-webpack": "^1.7.0",
+    "es6-object-assign": "^1.1.0",
     "es6-promise": "4.2.8",
     "promise-polyfill": "8.1.3",
     "react": "^16.9.0",
     "react-cam": "^1.0.2",
     "react-dom": "^16.9.0",
     "react-facebook-login": "^4.1.1",
-    "react-google-login": "^5.0.5",
-    "react-html5-camera-photo": "^1.5.2",
+    "react-google-login": "^5.0.5",    
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.0",
     "react-share": "^3.0.1",
-    "react-webcam": "3.1.1",
     "recharts": "1.7.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
@@ -105,7 +104,6 @@
     "dev": "webpack-dev-server --open --mode development",
     "build": "webpack --mode production && npm run pwa",
     "pwa": "pwa-asset-generator ./docs/img/touch/homescreen.png ./docs/img/touch --icon-only --manifest=./docs/manifest.json --index=./docs/index.html",
-    "serve": "http-server docs -o",
     "test": "jest",
     "ngrok": "ngrok http 8080"
   }
