--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@material-ui/core": "4.4.0",
     "@material-ui/icons": "4.2.1",
+    "@microsoft/applicationinsights-web": "^2.3.1",
     "clsx": "1.0.4",
     "disqus-react": "^1.0.7",
     "dotenv-webpack": "^1.7.0",
@@ -39,7 +40,7 @@
     "react-cam": "^1.0.2",
     "react-dom": "^16.9.0",
     "react-facebook-login": "^4.1.1",
-    "react-google-login": "^5.0.5",    
+    "react-google-login": "^5.0.5",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.0",
     "react-share": "^3.0.1",
