--- a/.env_example
+++ b/.env_example
@@ -18,7 +18,9 @@ GET_IMAGE_BY_NAME_KEY=
 RIA_KEY=
 FACEBOOK_CLIENT_ID=
 FACEBOOK_APP_SECRET=
-FACEBOOK_CLIENT_ID_DEV=
-FACEBOOK_APP_SECRET_DEV=
 GOOGLE_CLIENT_ID=
 GOOGLE_APP_SECRET=
+FACEBOOK_CLIENT_ID_DEV=
+FACEBOOK_APP_SECRET_DEV=
+GOOGLE_CLIENT_ID_DEV=
+GOOGLE_APP_SECRET_DEV=
