--- a/package.json
+++ b/package.json
@@ -29,15 +29,14 @@
   "dependencies": {
     "@material-ui/core": "4.4.0",
     "@material-ui/icons": "4.2.1",
-    "@microsoft/applicationinsights-web": "^2.3.1",
+    "@microsoft/applicationinsights-web": "2.3.1",
     "clsx": "1.0.4",
     "disqus-react": "^1.0.7",
     "dotenv-webpack": "^1.7.0",
-    "es6-object-assign": "^1.1.0",
+    "es6-object-assign": "1.1.0",
     "es6-promise": "4.2.8",
     "promise-polyfill": "8.1.3",
     "react": "^16.9.0",
-    "react-cam": "^1.0.2",
     "react-dom": "^16.9.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.5",
