add content from plartesmania service (Made Azure Function Proxy);

--- a/.env_example
+++ b/.env_example
@@ -13,6 +13,7 @@ AZURE_FUNC_PLATE_RECOGNIZER_EXTERNAL_SERVICE_URL=
 AZURE_TABLE_FAVORITES_SERVICE_URL=
 AZURE_TABLE_FAVORITES_SERVICE_URL_QUERY=
 AZURE_APP_INSIGHTS_KEY=
+AZURE_PLATESMANIA_PROXY=
 PLATES_MANIA_KEY=
 GET_IMAGE_BY_NAME_KEY=
 RIA_KEY=
