--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,12 +22,18 @@ steps:
     AZURE_FUNC_PLATE_RECOGNIZER_URL: $(AZURE_FUNC_PLATE_RECOGNIZER_URL)
     AZURE_FUNC_PLATE_RECOGNIZER_TOKEN: $(AZURE_FUNC_PLATE_RECOGNIZER_TOKEN)
     AZURE_FUNC_PLATE_RECOGNIZER_EXTERNAL_SERVICE_URL: $(AZURE_FUNC_PLATE_RECOGNIZER_EXTERNAL_SERVICE_URL)
+    AZURE_TABLE_FAVORITES_SERVICE_URL: $(AZURE_TABLE_FAVORITES_SERVICE_URL)
+    AZURE_TABLE_FAVORITES_SERVICE_URL_QUERY: $(AZURE_TABLE_FAVORITES_SERVICE_URL_QUERY)
+    AZURE_PLATESMANIA_PROXY: $(AZURE_PLATESMANIA_PROXY)
+    AZURE_APP_INSIGHTS_KEY: $(AZURE_APP_INSIGHTS_KEY)
+    PLATES_MANIA_KEY: $(PLATES_MANIA_KEY)
     GET_IMAGE_BY_NAME_KEY: $(GET_IMAGE_BY_NAME_KEY)
     RIA_KEY: $(RIA_KEY)
     FACEBOOK_CLIENT_ID: $(FACEBOOK_CLIENT_ID)
     FACEBOOK_APP_SECRET: $(FACEBOOK_APP_SECRET)
     GOOGLE_CLIENT_ID: $(GOOGLE_CLIENT_ID)
     GOOGLE_APP_SECRET: $(GOOGLE_APP_SECRET)
+
 - script: |
     npm install
     npm test
