Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,14 +74,14 @@ steps:
   inputs:
     cwd: WebGoat
 
-- task: AccidentalFish.githubpages-publish.AccidentalFish.GitHubPages-Publish.GitHubPagesPublish@1
-  displayName: 'Publishes to GitHub Pages'
-  inputs:
-    docPath: '$(System.DefaultWorkingDirectory)/docs'
-    githubusername: krak86
-    githubemail: 'rukrak86@gmail.com'
-    githubaccesstoken: adef1e4f90755a001ad6eeb15d40cbb85f261f74
-    repositoryname: carplates
+#- task: AccidentalFish.githubpages-publish.AccidentalFish.GitHubPages-Publish.GitHubPagesPublish@1
+#  displayName: 'Publishes to GitHub Pages'
+#  inputs:
+#    docPath: '$(System.DefaultWorkingDirectory)/docs'
+#    githubusername: krak86
+#    githubemail: 'rukrak86@gmail.com'
+#    githubaccesstoken: adef1e4f90755a001ad6eeb15d40cbb85f261f74
+#    repositoryname: carplates
 
 #- task: Npm@1
 #  displayName: 'Deploy project to github pages'
