--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,7 +75,7 @@ steps:
     docPath: '$(System.DefaultWorkingDirectory)\docs\*'
     githubusername: krak86
     githubemail: rukrak86@gmail.com
-    githubaccesstoken: 4112652e4a1b6539bb53bc8f2f5ae468213e4776
+    githubaccesstoken: '$(PersonalAccessToken)'
     repositoryname: carplates
 
 - task: whitesource.ws-bolt.bolt.wss.WhiteSource Bolt@19
