--- a/package.json
+++ b/package.json
@@ -32,10 +32,6 @@
     "@microsoft/applicationinsights-web": "2.3.1",
     "clsx": "1.0.4",
     "disqus-react": "^1.0.7",
-    "dotenv-webpack": "^1.7.0",
-    "es6-object-assign": "1.1.0",
-    "es6-promise": "4.2.8",
-    "promise-polyfill": "8.1.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-facebook-login": "^4.1.1",
@@ -45,8 +41,7 @@
     "react-share": "^3.0.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
-    "whatwg-fetch": "^3.0.0"
+    "redux-thunk": "^2.3.0"    
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
@@ -57,10 +52,9 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^5.1.0",
-    "@types/react-test-renderer": "^16.9.0",
     "@types/webpack": "^4.39.1",
+    "@types/react-test-renderer": "^16.9.0",
     "@types/webpack-env": "^1.14.0",
-    "autoprefixer": "^9.6.1",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "4.6.0",
     "css-loader": "3.2.0",
@@ -86,7 +80,6 @@
     "pwa-asset-generator": "^1.1.7",
     "react-test-renderer": "^16.9.0",
     "resolve-url-loader": "3.1.0",
-    "sass-loader": "^8.0.0",
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
     "ts-jest": "^24.0.2",
@@ -96,16 +89,14 @@
     "webpack-bundle-analyzer": "3.4.1",
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.14",
-    "webpack-manifest-plugin": "2.0.4",
     "webpack-notifier": "1.8.0",
     "workbox-webpack-plugin": "^4.3.1"
   },
   "scripts": {
-    "dev": "webpack-dev-server --open --mode development",
+    "run": "webpack-dev-server --open --mode development",
     "build": "webpack --mode production && npm run pwa",
     "deploy": "gh-pages -d docs",
     "pwa": "pwa-asset-generator ./docs/img/touch/homescreen.png ./docs/img/touch --icon-only --manifest=./docs/manifest.json --index=./docs/index.html",
-    "test": "jest",
-    "ngrok": "ngrok http 8080"
+    "test": "jest"
   }
 }
