--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,6 +45,27 @@ steps:
     reportDirectory: '$(System.DefaultWorkingDirectory)/__tests__'
     failIfCoverageEmpty: true
 
+- powershell: |
+   New-Item -Path . -Name ".env" -Force -Value @'
+   PUBLIC_SITE_URL: $(PUBLIC_SITE_URL)
+   DISQUS_SHORT_NAME: $(DISQUS_SHORT_NAME)
+   AZURE_TABLE_SERVICE_URL: $(AZURE_TABLE_SERVICE_URL)
+   AZURE_FUNC_PLATE_RECOGNIZER_URL: $(AZURE_FUNC_PLATE_RECOGNIZER_URL)
+   AZURE_FUNC_PLATE_RECOGNIZER_TOKEN: $(AZURE_FUNC_PLATE_RECOGNIZER_TOKEN)
+   AZURE_FUNC_PLATE_RECOGNIZER_EXTERNAL_SERVICE_URL: $(AZURE_FUNC_PLATE_RECOGNIZER_EXTERNAL_SERVICE_URL)
+   AZURE_TABLE_FAVORITES_SERVICE_URL: $(AZURE_TABLE_FAVORITES_SERVICE_URL)
+   AZURE_TABLE_FAVORITES_SERVICE_URL_QUERY: $(AZURE_TABLE_FAVORITES_SERVICE_URL_QUERY)
+   AZURE_PLATESMANIA_PROXY: $(AZURE_PLATESMANIA_PROXY)
+   AZURE_APP_INSIGHTS_KEY: $(AZURE_APP_INSIGHTS_KEY)
+   PLATES_MANIA_KEY: $(PLATES_MANIA_KEY)
+   RIA_KEY: $(RIA_KEY)
+   FACEBOOK_CLIENT_ID: $(FACEBOOK_CLIENT_ID)
+   FACEBOOK_APP_SECRET: $(FACEBOOK_APP_SECRET)
+   GOOGLE_CLIENT_ID: $(GOOGLE_CLIENT_ID)
+   GOOGLE_APP_SECRET: $(GOOGLE_APP_SECRET)
+   '@
+  displayName: 'Create .env'
+
 - task: Npm@1
   displayName: 'Build project'
   inputs:
