adjust CI pipeline;

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,7 +46,7 @@ steps:
     failIfCoverageEmpty: true
 
 - powershell: |
-   New-Item -Path . -Name ".env" -Force -Value @'
+   New-Item -Path '$(System.DefaultWorkingDirectory) -Name ".env" -Force -Value @'
    PUBLIC_SITE_URL: $(PUBLIC_SITE_URL)
    DISQUS_SHORT_NAME: $(DISQUS_SHORT_NAME)
    AZURE_TABLE_SERVICE_URL: $(AZURE_TABLE_SERVICE_URL)
@@ -60,9 +60,7 @@ steps:
    PLATES_MANIA_KEY: $(PLATES_MANIA_KEY)
    RIA_KEY: $(RIA_KEY)
    FACEBOOK_CLIENT_ID: $(FACEBOOK_CLIENT_ID)
-   FACEBOOK_APP_SECRET: $(FACEBOOK_APP_SECRET)
    GOOGLE_CLIENT_ID: $(GOOGLE_CLIENT_ID)
-   GOOGLE_APP_SECRET: $(GOOGLE_APP_SECRET)
    '@
   displayName: 'Create .env'
 
@@ -72,23 +70,6 @@ steps:
     command: 'custom'
     workingDir: '$(System.DefaultWorkingDirectory)'
     customCommand: 'run build'
-  env:
-    PUBLIC_SITE_URL: $(PUBLIC_SITE_URL)
-    DISQUS_SHORT_NAME: $(DISQUS_SHORT_NAME)
-    AZURE_TABLE_SERVICE_URL: $(AZURE_TABLE_SERVICE_URL)
-    AZURE_FUNC_PLATE_RECOGNIZER_URL: $(AZURE_FUNC_PLATE_RECOGNIZER_URL)
-    AZURE_FUNC_PLATE_RECOGNIZER_TOKEN: $(AZURE_FUNC_PLATE_RECOGNIZER_TOKEN)
-    AZURE_FUNC_PLATE_RECOGNIZER_EXTERNAL_SERVICE_URL: $(AZURE_FUNC_PLATE_RECOGNIZER_EXTERNAL_SERVICE_URL)
-    AZURE_TABLE_FAVORITES_SERVICE_URL: $(AZURE_TABLE_FAVORITES_SERVICE_URL)
-    AZURE_TABLE_FAVORITES_SERVICE_URL_QUERY: $(AZURE_TABLE_FAVORITES_SERVICE_URL_QUERY)
-    AZURE_PLATESMANIA_PROXY: $(AZURE_PLATESMANIA_PROXY)
-    AZURE_APP_INSIGHTS_KEY: $(AZURE_APP_INSIGHTS_KEY)
-    PLATES_MANIA_KEY: $(PLATES_MANIA_KEY)
-    RIA_KEY: $(RIA_KEY)
-    FACEBOOK_CLIENT_ID: $(FACEBOOK_CLIENT_ID)
-    FACEBOOK_APP_SECRET: $(FACEBOOK_APP_SECRET)
-    GOOGLE_CLIENT_ID: $(GOOGLE_CLIENT_ID)
-    GOOGLE_APP_SECRET: $(GOOGLE_APP_SECRET)
 
 - task: whitesource.ws-bolt.bolt.wss.WhiteSource Bolt@19
   displayName: 'WhiteSource Bolt'
