adjust CI pipeline;

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,6 +62,7 @@ steps:
    FACEBOOK_CLIENT_ID: $(FACEBOOK_CLIENT_ID)
    GOOGLE_CLIENT_ID: $(GOOGLE_CLIENT_ID)
    '@
+   Get-Content -Path .\.env
   displayName: 'Create .env'
 
 - task: Npm@1
