--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,29 +62,29 @@ steps:
    FACEBOOK_CLIENT_ID: "$(FACEBOOK_CLIENT_ID)"
    GOOGLE_CLIENT_ID: "$(GOOGLE_CLIENT_ID)"
    '@
-  displayName: 'Create .env'
+  displayName: 'Create ".env" file'
 
 - powershell: |
    New-Item -Path $(System.DefaultWorkingDirectory) -Name "env.json" -Force -Value @'
    {
-    "PUBLIC_SITE_URL": "$(PUBLIC_SITE_URL)",
-    "DISQUS_SHORT_NAME": "$(DISQUS_SHORT_NAME)",
-    "AZURE_TABLE_SERVICE_URL": "$(AZURE_TABLE_SERVICE_URL)",
-    "AZURE_FUNC_PLATE_RECOGNIZER_URL": "$(AZURE_FUNC_PLATE_RECOGNIZER_URL)",
-    "AZURE_FUNC_PLATE_RECOGNIZER_TOKEN": "$(AZURE_FUNC_PLATE_RECOGNIZER_TOKEN)",
-    "AZURE_FUNC_PLATE_RECOGNIZER_EXTERNAL_SERVICE_URL": "$(AZURE_FUNC_PLATE_RECOGNIZER_EXTERNAL_SERVICE_URL)",
-    "AZURE_TABLE_FAVORITES_SERVICE_URL": "$(AZURE_TABLE_FAVORITES_SERVICE_URL)",
-    "AZURE_TABLE_FAVORITES_SERVICE_URL_QUERY": "$(AZURE_TABLE_FAVORITES_SERVICE_URL_QUERY)",
-    "AZURE_PLATESMANIA_PROXY": "$(AZURE_PLATESMANIA_PROXY)",
-    "AZURE_APP_INSIGHTS_KEY": "$(AZURE_APP_INSIGHTS_KEY)",
-    "PLATES_MANIA_KEY": "$(PLATES_MANIA_KEY)",
-    "RIA_KEY": "$(RIA_KEY)",
-    "FACEBOOK_CLIENT_ID": "$(FACEBOOK_CLIENT_ID)",
-    "GOOGLE_CLIENT_ID": "$(GOOGLE_CLIENT_ID)"
+   "PUBLIC_SITE_URL": "$(PUBLIC_SITE_URL)",
+   "DISQUS_SHORT_NAME": "$(DISQUS_SHORT_NAME)",
+   "AZURE_TABLE_SERVICE_URL": "$(AZURE_TABLE_SERVICE_URL)",
+   "AZURE_FUNC_PLATE_RECOGNIZER_URL": "$(AZURE_FUNC_PLATE_RECOGNIZER_URL)",
+   "AZURE_FUNC_PLATE_RECOGNIZER_TOKEN": "$(AZURE_FUNC_PLATE_RECOGNIZER_TOKEN)",
+   "AZURE_FUNC_PLATE_RECOGNIZER_EXTERNAL_SERVICE_URL": "$(AZURE_FUNC_PLATE_RECOGNIZER_EXTERNAL_SERVICE_URL)",
+   "AZURE_TABLE_FAVORITES_SERVICE_URL": "$(AZURE_TABLE_FAVORITES_SERVICE_URL)",
+   "AZURE_TABLE_FAVORITES_SERVICE_URL_QUERY": "$(AZURE_TABLE_FAVORITES_SERVICE_URL_QUERY)",
+   "AZURE_PLATESMANIA_PROXY": "$(AZURE_PLATESMANIA_PROXY)",
+   "AZURE_APP_INSIGHTS_KEY": "$(AZURE_APP_INSIGHTS_KEY)",
+   "PLATES_MANIA_KEY": "$(PLATES_MANIA_KEY)",
+   "RIA_KEY": "$(RIA_KEY)",
+   "FACEBOOK_CLIENT_ID": "$(FACEBOOK_CLIENT_ID)",
+   "GOOGLE_CLIENT_ID": "$(GOOGLE_CLIENT_ID)"
    }
    '@
-   Get-Content -Path .\.env.json
-  displayName: 'Create env.json'
+   Get-Content -Path $(System.DefaultWorkingDirectory)\env.json
+  displayName: 'Create "env.json" file'
 
 - task: Npm@1
   displayName: 'Build project'
