internet explorer 11 fix;

--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
   "engines": {
     "node": ">=12.1.0"
   },
-  "dependencies": {
+  "dependencies": {    
     "@material-ui/core": "4.4.0",
     "@material-ui/icons": "4.2.1",
     "@microsoft/applicationinsights-web": "2.3.1",
     "clsx": "1.0.4",
     "disqus-react": "^1.0.7",
-    "dotenv-webpack": "^1.7.0",
+    "dotenv-webpack": "^1.7.0",    
     "react": "^16.9.0",
+    "react-app-polyfill": "^1.0.5",
     "react-dom": "^16.9.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.5",
