--- a/package.json
+++ b/package.json
@@ -88,6 +88,9 @@
     "terser-webpack-plugin": "1.4.1",
     "ts-jest": "^24.0.2",
     "ts-loader": "^5.3.2",
+    "tslint": "^5.20.1",
+    "tslint-react": "^4.1.0",
+    "tslint-webpack-plugin": "^2.1.0",
     "typescript": "3.2.2",
     "webpack": "4.28.2",
     "webpack-bundle-analyzer": "3.4.1",
