--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "ts-loader": "^5.3.2",
     "tslint": "^5.20.1",
     "tslint-react": "^4.1.0",
+    "tslint-react-hooks": "^2.2.1",
     "tslint-webpack-plugin": "^2.1.0",
     "typescript": "3.2.2",
     "webpack": "4.28.2",
