--- a/package.json
+++ b/package.json
@@ -109,6 +109,6 @@
     "deploy": "gh-pages -d docs",
     "pwa": "pwa-asset-generator ./docs/img/touch/homescreen.png ./docs/img/touch --icon-only --manifest=./docs/manifest.json --index=./docs/index.html",
     "test": "jest",
-    "lighthouse": "lighthouse https://carsua.app --output=html --output-path=./__tests__lighthouse/report.html --save-assets --quiet --chrome-flags=\"--headless\""
+    "lighthouse": "lighthouse https://carsua.pp.ua --output=html --output-path=./__tests__lighthouse/lighthouse.html --save-assets --quiet --chrome-flags=\"--headless\""
   }
 }
