--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -3,5 +3,8 @@
     "compilerOptions": {
       "noEmit": false
     },
-
+    "include": [
+      "../node_modules/cypress",
+      "./*/*.ts"
+    ]
 }
