--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,4 +59,6 @@
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
+  "include": ["**/src/**/*.ts", "**/src/**/*.tsx"],
+  "exclude": ["**/src/**/*.test.ts", "**/src/**/*.test.tsx"],
 }
